syntax = "proto3";

package stratum_pool ;

service StratumPool{
    rpc MiningSubscribe (SubscribeRequest) returns (SubscribeRespone);
    rpc MiningAuthorize (AuthorizeRequest) returns (AuthorizeRespone);
    rpc MiningShare (ShareRequest) returns (ShareRespone);
}

message SubscribeRequest {
    string worker_name = 1;
    string stratum_version = 2;
    string worker_rpc_server = 3;
}

message SubscribeRespone {
    string pool_name = 1;
    string stratum_version = 2;
    string subscription_number = 3;
}

message AuthorizeRequest {
    string username = 1;
    string password = 2;
}

message AuthorizeRespone {
    bool authorize_status = 1;
}

message ShareRequest {
    uint32 id = 1;
}
message ShareRespone {
    uint32 id = 1;
}
